@@ -1,3 +1,7 @@
+2018-05-09 Magnus Hagdorn
+ * piccolo2/player/PlayerApp.py: use new connect method to connect to piccolo
+   server; disconnect from server on exit
+
 2018-05-01 Magnus Hagdorn
  * piccolo2/player/PlayerApp.py: make GUI more responsive when changing
    paremeters
